# STARK

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/duckdb/: runner_data.db
docs/: agents_ideas.md  dashboard_feedback.md  dashobard.md  orchestrator_plan.md
scripts/: garmin_auth.py
src/agents/: biomechanics_agent.py  jarvis_agent.py  orchestrator.py  planner_agent.py
src/chat/: fastapi_app.py
src/config/: agents.py  logging_config.py
src/db/: connection.py  transformations.py
src/extractors/: garmin.py
src/models/: biometrics.py  workouts.py
tests/: test_biometrics.py  test_connection.py  test_connection_queries.py  test_extractors.py  test_jarvis_tools.py  test_transformations.py
